contest, vote submission, candidate error fixed