@@ -51,9 +51,11 @@ public class VoteTallyServiceImplementation implements VoteTallyService {
     private final OrganizationRepository orgRepo;
     private final VoteSubmissionRepository voteSubmissionRepository;
     private final PartyRepository partyRepo;
-    private final CandidateRepository candidateRepo;
+    private final ElectionCandidateRepository electionCandidateRepository;
     private final SystemUserRepository systemUserRepo;
     private final ElectionRepository electionRepo;
+    private final ContestRepository contestRepository;
+
     private final JdbcTemplate jdbc;
 
     private final VoteTallyMapper mapper = new VoteTallyMapper();
@@ -64,23 +66,26 @@ public class VoteTallyServiceImplementation implements VoteTallyService {
     private static final ConcurrentHashMap<String, Object> RUN_LOCKS = new ConcurrentHashMap<>();
 
 
-
     @Override
     @Transactional(readOnly = true)
     public Page<VoteTallyDto> search(UUID orgId,
                                      UUID electionId,
-                                     UUID candidateId,
+                                     UUID electId,
                                      UUID partyId,
+                                     UUID contestId,
                                      Pageable pageable) {
 
         Specification<VoteTally> spec = Specification
                 .where(VoteTallySpecs.orgEquals(orgId))
                 .and(VoteTallySpecs.electionEquals(electionId))
-                .and(VoteTallySpecs.candidateEquals(candidateId))
-                .and(VoteTallySpecs.partyEquals(partyId));
+                .and(VoteTallySpecs.electEquals(electId))     // ✅ update spec
+                .and(VoteTallySpecs.partyIdEquals(partyId))   // ✅ update spec (partyId column)
+                .and(VoteTallySpecs.contestEquals(contestId));// ✅ update spec
 
         return voteTallyRepository.findAll(spec, pageable).map(mapper::toDTO);
     }
+
+
 
     /**
      * Convenience overload – system recompute (no explicit user).
@@ -90,6 +95,8 @@ public class VoteTallyServiceImplementation implements VoteTallyService {
     public List<VoteTallyDto> recomputeForElection(UUID orgId, UUID electionId) {
         return recomputeForElection(orgId, electionId, null);
     }
+
+
 
 
     /**
@@ -114,12 +121,11 @@ public class VoteTallyServiceImplementation implements VoteTallyService {
         Organization org = orgRepo.findById(orgId)
                 .orElseThrow(() -> new ResponseStatusException(NOT_FOUND, "Organization not found"));
 
-        // JVM-level guard
-        String lockKey = orgId.toString() + ":" + electionId.toString();
-        Object myLock = new Object();
-        Object existing = RUN_LOCKS.putIfAbsent(lockKey, myLock);
+        String lockKey = orgId + ":" + electionId;
+        Object existing = RUN_LOCKS.putIfAbsent(lockKey, new Object());
         if (existing != null) {
-            log.warn("Recompute for org={} election={} already in progress (in-JVM). Skipping duplicate request.", orgId, electionId);
+            log.warn("Recompute for org={} election={} already in progress (in-JVM). Skipping.",
+                    orgId, electionId);
             return List.of();
         }
 
@@ -127,136 +133,135 @@ public class VoteTallyServiceImplementation implements VoteTallyService {
         long advisoryKey = computeAdvisoryKey(orgId, electionId);
 
         try {
-            // Acquire Postgres advisory lock (non-blocking). Requires DB permission.
             try {
                 Boolean got = jdbc.queryForObject("SELECT pg_try_advisory_lock(?)", Boolean.class, advisoryKey);
                 advisoryLockAcquired = Boolean.TRUE.equals(got);
                 if (!advisoryLockAcquired) {
-                    log.warn("Recompute for org={} election={} could not acquire advisory lock; scheduling retry.", orgId, electionId);
-                    // IMPORTANT: Throw a dedicated exception so caller/listener can schedule retry.
-                    throw new AdvisoryLockNotAcquiredException("Another node holds advisory lock for org=" + orgId + " election=" + electionId);
+                    throw new AdvisoryLockNotAcquiredException(
+                            "Another node holds advisory lock for org=" + orgId + " election=" + electionId
+                    );
                 }
             } catch (AdvisoryLockNotAcquiredException ex) {
-                throw ex; // rethrow so outer catch (if any) can handle scheduling
+                throw ex;
             } catch (Exception e) {
-                // If advisory locks are not available or this query fails, log and continue with JVM guard only.
-                log.warn("Could not run pg_try_advisory_lock (proceeding with JVM guard only): {}", e.getMessage());
-                // do NOT throw here; we continue relying on JVM guard only
+                log.warn("pg_try_advisory_lock unavailable, using JVM guard only: {}", e.getMessage());
             }
 
-            List<VoteSubmission> verifiedSubs =
-                    voteSubmissionRepository.findByOrganization_OrgIdAndElection_ElectionIdAndStatus(
-                            orgId, electionId, VoteStatus.VERIFIED);
+            long verifiedCount = voteSubmissionRepository
+                    .findByOrganization_OrgIdAndElection_ElectionIdAndStatus(
+                            orgId, electionId, VoteStatus.VERIFIED)
+                    .size();
 
-            long verifiedCount = verifiedSubs.size();
-            log.info("DEBUG: recomputeForElection org={} election={} -> {} VERIFIED submissions (JPA)",
+            log.info("DEBUG: recomputeForElection org={} election={} -> {} VERIFIED submissions",
                     orgId, electionId, verifiedCount);
 
-            // 1) Aggregate per candidate using DB JSONB expansion.
-            //    Use parameter for status so it's tied to VoteStatus enum.
+            /*
+             * FINAL TRUTH:
+             * - candidate_votes JSON key = elect_id
+             * - contest_option validates candidate belongs to contest
+             * - election_candidate maps elect_id -> candidate_id
+             * - candidate.party_id is the ONLY party source
+             */
             String sql = """
-                SELECT (e.key)::uuid AS candidate_id,
-                       SUM((e.value)::int) AS votes
-                  FROM vote_submission s,
-                       jsonb_each_text(s.candidate_votes) AS e(key, value)
-                 WHERE s.org_id = ?
-                   AND s.election_id = ?
-                   AND s.status = ?
-                 GROUP BY e.key
-                """;
+            SELECT
+                s.contest_id::uuid       AS contest_id,
+                (e.key)::uuid            AS elect_id,
+                c.party_id::uuid         AS party_id,
+                SUM((e.value)::int)      AS votes
+            FROM vote_submission s
+            CROSS JOIN LATERAL jsonb_each_text(s.candidate_votes) AS e(key, value)
 
-            // Pass the persisted representation of VERIFIED ("VERIFIED" with EnumType.STRING)
+            JOIN contest_option co
+              ON co.contest_id  = s.contest_id
+             AND co.election_id = s.election_id
+             AND co.is_active   = true
+             AND co.option_type = 'CANDIDATE'
+             AND co.elect_id    = (e.key)::uuid
+
+            JOIN election_candidate ec
+              ON ec.elect_id    = (e.key)::uuid
+             AND ec.election_id = s.election_id
+
+            JOIN candidate c
+              ON c.candidate_id = ec.candidate_id
+
+            WHERE s.org_id = ?
+              AND s.election_id = ?
+              AND s.status = ?
+              AND e.value ~ '^[0-9]+$'
+
+            GROUP BY s.contest_id, (e.key)::uuid, c.party_id
+        """;
+
             List<Map<String, Object>> rows =
                     jdbc.queryForList(sql, orgId, electionId, VoteStatus.VERIFIED.name());
 
-            log.info("DEBUG: recomputeForElection org={} election={} -> SQL produced {} candidate rows",
-                    orgId, electionId, rows.size());
+            log.info("DEBUG: recomputeForElection produced {} tally rows", rows.size());
 
-            // 2) Delete existing tallies for this org+election (atomic within transaction)
             voteTallyRepository.deleteByOrgAndElection(orgId, electionId);
 
-            // 3) If no verified submissions / rows -> cleared tallies
             if (rows.isEmpty()) {
-                log.info("No VERIFIED submissions (or no candidate_votes rows) for org={} election={}. Tallies cleared.",
-                        orgId, electionId);
+                log.warn("Recompute produced 0 rows despite VERIFIED submissions={}", verifiedCount);
                 return List.of();
             }
 
-            // 4) Prepare candidate entities map
-            List<UUID> candidateIds = rows.stream()
-                    .map(r -> UUID.fromString(r.get("candidate_id").toString()))
-                    .distinct()
-                    .collect(Collectors.toList());
-
-            Map<UUID, Candidate> candidateMap = candidateRepo.findAllById(candidateIds).stream()
-                    .collect(Collectors.toMap(Candidate::getCandidateId, c -> c));
-
-            // 5) Fetch full election entity (so DTO contains electionName etc.)
             Election election = electionRepo.findById(electionId).orElseGet(() -> {
-                Election stub = new Election();
-                stub.setElectionId(electionId);
-                return stub;
+                Election e = new Election();
+                e.setElectionId(electionId);
+                return e;
             });
 
-            // 6) Build new VoteTally entities
-            LocalDateTime now = LocalDateTime.now();
             SystemUser recomputedBy = (recomputedByUserId == null) ? null :
                     systemUserRepo.findById(recomputedByUserId)
                             .orElseThrow(() -> new ResponseStatusException(NOT_FOUND, "Recomputed-by user not found"));
 
+            LocalDateTime now = LocalDateTime.now();
             List<VoteTally> toSave = new ArrayList<>(rows.size());
-            for (Map<String, Object> r : rows) {
-                UUID candidateId = UUID.fromString(r.get("candidate_id").toString());
-                int totalVotes = ((Number) r.get("votes")).intValue();
 
-                Candidate cand = candidateMap.get(candidateId);
+            for (Map<String, Object> r : rows) {
+                UUID contestId = UUID.fromString(r.get("contest_id").toString());
+                UUID electId   = UUID.fromString(r.get("elect_id").toString());
+                UUID partyId   = UUID.fromString(r.get("party_id").toString());
+                int votes      = ((Number) r.get("votes")).intValue();
 
                 VoteTally v = new VoteTally();
                 v.setOrganization(org);
                 v.setElection(election);
-                v.setCandidate(cand);
-                v.setParty(cand != null ? cand.getParty() : null);
-                v.setVoteCount(totalVotes);
+
+                // ✅ WRITE-SAFE COLUMNS
+                v.setContestId(contestId);
+                v.setElectId(electId);
+                v.setPartyId(partyId);
+
+                v.setVoteCount(votes);
                 v.setLastRecomputedAt(now);
                 v.setRecomputedBy(recomputedBy);
 
                 toSave.add(v);
             }
 
-            // 7) Persist new tallies (atomic within this transaction)
             List<VoteTally> saved = voteTallyRepository.saveAll(toSave);
-
-            // 8) Map to DTOs and return
-            List<VoteTallyDto> out = saved.stream().map(mapper::toDTO).collect(Collectors.toList());
-            log.info("Recomputed {} tallies for org={} election={}", out.size(), orgId, electionId);
-            return out;
+            return saved.stream().map(mapper::toDTO).toList();
 
         } finally {
-            // release advisory lock if acquired
             if (advisoryLockAcquired) {
                 try {
-                    // use queryForObject for SELECT
-                    Boolean unlocked = jdbc.queryForObject("SELECT pg_advisory_unlock(?)", Boolean.class, advisoryKey);
-                    log.debug("pg_advisory_unlock returned {}", unlocked);
-                } catch (Exception e) {
-                    log.warn("Failed to release advisory lock for org={} election={}: {}", orgId, electionId, e.getMessage());
-                }
+                    jdbc.queryForObject("SELECT pg_advisory_unlock(?)", Boolean.class, advisoryKey);
+                } catch (Exception ignored) {}
             }
-            // release JVM guard
             RUN_LOCKS.remove(lockKey);
         }
     }
-
 
 
     // ------------------------------------------------------------------------
     // Helpers
     // ------------------------------------------------------------------------
     private long computeAdvisoryKey(UUID orgId, UUID electionId) {
-        // Create a stable 64-bit key from the two UUIDs.
-        // We take a name-based UUID from the concatenated ids and combine MSB/LSB.
-        UUID combined = UUID.nameUUIDFromBytes((orgId.toString() + "|" + electionId.toString()).getBytes(StandardCharsets.UTF_8));
+        UUID combined = UUID.nameUUIDFromBytes((orgId.toString() + "|" + electionId.toString())
+                .getBytes(StandardCharsets.UTF_8));
         return combined.getMostSignificantBits() ^ combined.getLeastSignificantBits();
     }
+
 
 }
